--- a/nlp_pratical_session_ChatGPT.ipynb
+++ b/nlp_pratical_session_ChatGPT.ipynb
@@ -19,7 +19,235 @@
     "\n",
     "------------------------\n",
     "# Chapter 2: ChatGPT\n",
-    "[ChatGPT](https://chat.openai.com) is an AI chatbot developed by OpenAI. ChatGPT uses a generative language model called GPT-3.5 without subscription and GPT-4 (for 20$/month)"
+    "[ChatGPT](https://chat.openai.com) is an AI chatbot developed by OpenAI. ChatGPT uses a generative language model called GPT-3.5 without subscription and GPT-4 for 20€/month.\n",
+    "\n",
+    "## 2.1 Requirements\n",
+    "As we are going to use ChatGPT through the [OpenAI API](https://platform.openai.com/), participants need to create a account in order to obtain an API key: [here](https://platform.openai.com/)\n",
+    "\n",
+    "+ Free access: 18$ will be credited for a short period of time and it would not be renewed.\n",
+    "+ Or add a payment method\n",
+    "\n",
+    "Then let's begin with GPT3.5-turbo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting openai\n",
+      "  Downloading openai-0.27.4-py3-none-any.whl (70 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m70.3/70.3 kB\u001b[0m \u001b[31m755.3 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests>=2.20 in ./.conda/lib/python3.10/site-packages (from openai) (2.28.2)\n",
+      "Collecting aiohttp\n",
+      "  Using cached aiohttp-3.8.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.0 MB)\n",
+      "Requirement already satisfied: tqdm in ./.conda/lib/python3.10/site-packages (from openai) (4.65.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in ./.conda/lib/python3.10/site-packages (from requests>=2.20->openai) (1.26.15)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in ./.conda/lib/python3.10/site-packages (from requests>=2.20->openai) (3.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in ./.conda/lib/python3.10/site-packages (from requests>=2.20->openai) (2022.12.7)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in ./.conda/lib/python3.10/site-packages (from requests>=2.20->openai) (3.1.0)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in ./.conda/lib/python3.10/site-packages (from aiohttp->openai) (22.2.0)\n",
+      "Collecting aiosignal>=1.1.2\n",
+      "  Using cached aiosignal-1.3.1-py3-none-any.whl (7.6 kB)\n",
+      "Collecting yarl<2.0,>=1.0\n",
+      "  Using cached yarl-1.8.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (264 kB)\n",
+      "Collecting multidict<7.0,>=4.5\n",
+      "  Using cached multidict-6.0.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (114 kB)\n",
+      "Collecting frozenlist>=1.1.1\n",
+      "  Using cached frozenlist-1.3.3-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (149 kB)\n",
+      "Collecting async-timeout<5.0,>=4.0.0a3\n",
+      "  Using cached async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\n",
+      "Installing collected packages: multidict, frozenlist, async-timeout, yarl, aiosignal, aiohttp, openai\n",
+      "Successfully installed aiohttp-3.8.4 aiosignal-1.3.1 async-timeout-4.0.2 frozenlist-1.3.3 multidict-6.0.4 openai-0.27.4 yarl-1.8.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# installation\n",
+    "!pip install openai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai\n",
+    "openai.api_key = \"sk-\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "babbage\n",
+      "davinci\n",
+      "text-davinci-edit-001\n",
+      "babbage-code-search-code\n",
+      "text-similarity-babbage-001\n",
+      "code-davinci-edit-001\n",
+      "text-davinci-001\n",
+      "ada\n",
+      "babbage-code-search-text\n",
+      "babbage-similarity\n",
+      "code-search-babbage-text-001\n",
+      "text-curie-001\n",
+      "whisper-1\n",
+      "code-search-babbage-code-001\n",
+      "text-davinci-003\n",
+      "text-ada-001\n",
+      "text-embedding-ada-002\n",
+      "text-similarity-ada-001\n",
+      "curie-instruct-beta\n",
+      "ada-code-search-code\n",
+      "ada-similarity\n",
+      "code-search-ada-text-001\n",
+      "text-search-ada-query-001\n",
+      "davinci-search-document\n",
+      "ada-code-search-text\n",
+      "text-search-ada-doc-001\n",
+      "davinci-instruct-beta\n",
+      "text-similarity-curie-001\n",
+      "code-search-ada-code-001\n",
+      "ada-search-query\n",
+      "text-search-davinci-query-001\n",
+      "curie-search-query\n",
+      "davinci-search-query\n",
+      "babbage-search-document\n",
+      "ada-search-document\n",
+      "text-search-curie-query-001\n",
+      "text-search-babbage-doc-001\n",
+      "curie-search-document\n",
+      "text-search-curie-doc-001\n",
+      "babbage-search-query\n",
+      "text-babbage-001\n",
+      "text-search-davinci-doc-001\n",
+      "text-search-babbage-query-001\n",
+      "curie-similarity\n",
+      "gpt-3.5-turbo-0301\n",
+      "curie\n",
+      "gpt-3.5-turbo\n",
+      "text-similarity-davinci-001\n",
+      "text-davinci-002\n",
+      "davinci-similarity\n",
+      "cushman:2020-05-03\n",
+      "ada:2020-05-03\n",
+      "babbage:2020-05-03\n",
+      "curie:2020-05-03\n",
+      "davinci:2020-05-03\n",
+      "if-davinci-v2\n",
+      "if-curie-v2\n",
+      "if-davinci:3.0.0\n",
+      "davinci-if:3.0.0\n",
+      "davinci-instruct-beta:2.0.0\n",
+      "text-ada:001\n",
+      "text-davinci:001\n",
+      "text-curie:001\n",
+      "text-babbage:001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list models\n",
+    "models = openai.Model.list()\n",
+    "\n",
+    "for model in models.data:\n",
+    "    print(f\"{model.id}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"created\": 1677649963,\n",
+      "  \"id\": \"gpt-3.5-turbo-0301\",\n",
+      "  \"object\": \"model\",\n",
+      "  \"owned_by\": \"openai\",\n",
+      "  \"parent\": null,\n",
+      "  \"permission\": [\n",
+      "    {\n",
+      "      \"allow_create_engine\": false,\n",
+      "      \"allow_fine_tuning\": false,\n",
+      "      \"allow_logprobs\": true,\n",
+      "      \"allow_sampling\": true,\n",
+      "      \"allow_search_indices\": false,\n",
+      "      \"allow_view\": true,\n",
+      "      \"created\": 1680905315,\n",
+      "      \"group\": null,\n",
+      "      \"id\": \"modelperm-ufCyf8i6fKYyUSkDZ0Hd6Vpe\",\n",
+      "      \"is_blocking\": false,\n",
+      "      \"object\": \"model_permission\",\n",
+      "      \"organization\": \"*\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"root\": \"gpt-3.5-turbo-0301\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print GPT3.5 info\n",
+    "print(models.data[44])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Certainly! One Health is a concept that recognizes the interconnectedness of human, animal, and environmental health. It emphasizes the importance of collaboration and communication across different sectors and disciplines to address complex health issues that affect all three domains.\n",
+      "\n",
+      "The One Health approach recognizes that human health is closely linked to the health of animals and the environment. For example, many infectious diseases that affect humans, such as Ebola and COVID-19, are zoonotic, meaning they are transmitted from animals to humans. Environmental factors, such as climate change and pollution, can also have significant impacts on human and animal health.\n",
+      "\n",
+      "By taking a One Health approach, researchers, healthcare professionals, and policymakers can work together to identify and address health issues that affect multiple domains. This can lead to more effective and sustainable solutions that benefit both human and animal populations, as well as the environment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = openai.ChatCompletion.create(\n",
+    "    model=\"gpt-3.5-turbo-0301\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are an academic researcher\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Could you explain me what one health concept is ?\"},\n",
+    "    ],\n",
+    "    temperature=0,\n",
+    ")\n",
+    "\n",
+    "print(response['choices'][0]['message']['content'])\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 Text generation with ChatGPT"
    ]
   },
   {
@@ -29,8 +257,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
